--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,9 @@ source:
 build:
   number: 0
   detect_binary_files_with_prefix: true
+  skip: true  # [win]
+  skip: true  # [linux]
+  skip: true  # [osx and x86]
   run_exports:
     - {{ pin_subpackage('qt-svg', max_pin='x.x') }}
 
