add more things for osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -71,6 +71,9 @@ requirements:
     - {{ cdt('xcb-util-keysyms-devel') }}     # [linux]
     - {{ cdt('xcb-util-renderutil-devel') }}  # [linux]
     - {{ cdt('xcb-util-wm-devel') }}          # [linux]
+    # libclang is required in order to enable simultaneous x86_64 and
+    # arm64 support for QDoc
+    - libclang                           # [arm64]
     # Although these should be host-only dependencies, they are needed when
     # cross-compiling arm64 binaries on x86_64 since llvm-config (host/arm64)
     # cannot be executed on x86_64 to locate libclang successfully
@@ -83,6 +86,8 @@ requirements:
     - libclang
     - zlib
 
+  run_constrained:
+    - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.14") }}  # [osx and x86_64]
 test:
   requires:
     - sysroot_linux-64 2.17              # [linux]
