--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - perl
     - {{ compiler('cxx') }}
     - {{ compiler('c') }}
-    - qt-base                            # [build_platform != target_platform]
+    # - qt-base                            # [build_platform != target_platform]
     - sysroot_linux-64 2.17              # [linux]
     - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
     - {{ cdt('libx11-devel') }}          # [linux]
@@ -73,7 +73,7 @@ requirements:
     - {{ cdt('xcb-util-wm-devel') }}          # [linux]
     # libclang is required in order to enable simultaneous x86_64 and
     # arm64 support for QDoc
-    - libclang                           # [arm64]
+    # - libclang                           # [arm64]
     # Although these should be host-only dependencies, they are needed when
     # cross-compiling arm64 binaries on x86_64 since llvm-config (host/arm64)
     # cannot be executed on x86_64 to locate libclang successfully
